2003-05-10 Jackson Harper <jackson@latitudegeo.com>

	* ExternTable.cs: Alias corlib to mscorlib since these seem to get
	used interchangably
		
2003-05-10 Jackson Harper <jackson@latitudegeo.com>

	* IMethodRef.cs: New file - Interface that method references must
	implement
	* ExternMethodRef.cs: New file - Reference to a method in another
	assembly
	* Local.cs: New file - A Local variable
	* MethodInstr.cs: New file - an instruction that takes a method
	reference operand
	* IClassRef.cs: Add method to get a method reference from a class
	reference
	* MethodDef.cs: Add ability to resolve methods before defining
	them, add max stack, locals, and entry point. Make CreateSignature
	method public and static so other classes can use it.
	* TypeDef.cs: Store methods and fields in hashtables so they can
	be easily retrieved, add method to resolve member methods.
	* TypeRef.cs: Add method for resolving member methods.
	* ExternTypeRef.cs: Add methods to get classref and methodrefs
	* MethodRef.cs: New file - Reference to a method in this assembly.
	
		
2003-05-07 Jackson Harper <jackson@latitudegeo.com>

	* TypeInstr.cs: New file - implementation of instructions that
	take a single type instruction.
		
2003-05-06 Jackson Harper <jackson@latitudegeo.com>

	* SwitchInstr.cs: New file - implementation of switch instructions
		
2003-05-05 Jackson Harper <jackson@lattidegeo.com>

	* MethodDef.cs: Add ability to add and emit labels
	* BranchInstr.cs: New file - Branch instructions
		
2003-05-04 Jackson Harper <jackson@latitudegeo.com>

	* LdcInstr.cs: New file - lcd* instructions
	* MiscInstr.cs: New file - Just an enum that gives me constant
	values for instructions PEAPI does not define in an enum
	* InstrTable.cs: Use new MiscInstr constants instead of string values.
		
2003-05-01 Jackson Harper <jackson@latitudegeo.com>

	* CodeGen.cs: Define the contents of types after all types have
	been resolved, this avoids the infinite loop that would occur if a